--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.4",
     "@sideway/address": "^4.1.1",
+    "axios": "^0.21.1",
     "core-js": "^3.10.2",
     "expo": "~41.0.0",
     "expo-app-loading": "^1.0.3",
